refactor(ui-javafx): drop redundant nullability + debug prints + dead Logger field
- AutoCompleteComboBoxListener: constructor param ComboBox<Any>? → ComboBox<Any>; drop 8
  requireNotNull(comboBox) calls in the body. Replace if/else-if key chain with when. Add
  explicit comment that .lowercase() defaults to Locale.ROOT in Kotlin 1.5+ to head off
  the "Turkish locale i→İ" question. Single callsite (kudos-tools ColumnsController) already
  passes a non-null ComboBox, so wire-compat is preserved.
- XTextFieldTableCell.startEdit: remove leftover System.out.println(tf.text) / println("commit")
  debug output.
- XTableCellBehavior: remove unused `private val LOG = Logger.getLogger(...)` and its import.
- README: document the cleanups + new caveats (com.sun.javafx internal API exposure to
  javafx 25+ removal risk, .text-field skin lookup brittleness).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>